src/core/c_api/itscam_sdk_c.h

/**
 * @brief Check if a directory exists.
 */
ITSCAM_C_API int ITSCAM_folderExists(const char* path);
/**
 * @brief Get the last error message.
 * @return Error message string (thread-local, valid until next SDK call).
 */
ITSCAM_C_API const char* ITSCAM_getLastError(void);
/**
 * @brief Get the SDK version string.
 */
ITSCAM_C_API const char* ITSCAM_getVersion(void);