wrappers/python/itscam/bindings.py

    
    lib.ITSCAM_folderExists.argtypes = [c_char_p]
    lib.ITSCAM_folderExists.restype = c_int
    
    lib.ITSCAM_getLastError.argtypes = []
    lib.ITSCAM_getLastError.restype = c_char_p
    
    lib.ITSCAM_getVersion.argtypes = []
    lib.ITSCAM_getVersion.restype = c_char_p
